@@ -1,18 +1,24 @@
+{"Characters not allowed: @ : ' \" < > &","Caracteres no permitidos: @ : ' \" < > &"}.
+{"Don't tell your password to anybody, not even the administrators of the Jabber server.","No le digas tu contraseña a nadie, ni siquiera a los administradores del servidor Jabber."}.
 {"Jabber Account Registration","Registro de Cuenta Jabber"}.
+{"Memorize your password, or write it in a paper placed in a safe place. In Jabber there isn't an automated way to recover your password if you forget it.","Memoriza tu contraseña, o apúntala en un papel en un lugar seguro. En Jabber no hay un método automatizado para recuperar la contraseña si la olvidas."}.
 {"New Password:","Contraseña nueva:"}.
 {"Old Password:","Contraseña antigua:"}.
 {"Password Verification:","Verificación de contraseña:"}.
 {"Register a Jabber account","Registrar una cuenta Jabber"}.
 {"Register","Registrar"}.
 {"Server:","Servidor:"}.
+{"Some Jabber clients can store your password in your computer. Use that feature only if you trust your computer is safe.","Algunos clientes Jabber pueden recordar tu contraseña en la máquina. Usa esa opción solo si confías en que la máquina que usas es segura."}.
 {"The password of your Jabber account was succesfully changed.","La contraseña de tu cuenta Jabber se ha cambiado correctamente."}.
 {"There was an error changing the password: ","Hubo un error cambiando la contraseña."}.
 {"There was an error creating the account: ","Hubo uno error al crear la cuenta:"}.
 {"There was an error deleting the account: ","Hubo un error borrando la cuenta."}.
-{"This page allows to create a Jabber account in this Jabber server. Your JID (Jabber IDentifier) will be of the form: username@server. Please read carefully the instructions to fill correctly the fields.","Esta página de permite crear una cuenta Jabber este servidor Jabber. Tu JID (Jabber IDentificador) será de la forma: nombredeusuario@servidor. Por favor lee detenidamente las instrucciones para rellenar correctamente los campos."}.
+{"This is case insensitive: macbeth is the same that MacBeth and Macbeth.","No importa si usas mayúsculas: macbeth es lo mismo que MacBeth y Macbeth."}.
+{"This page allows to create a Jabber account in this Jabber server. Your JID (Jabber IDentifier) will be of the form: username@server. Please read carefully the instructions to fill correctly the fields.","Esta página te permite crear una cuenta Jabber este servidor Jabber. Tu JID (Jabber IDentificador) será de la forma: nombredeusuario@servidor. Por favor lee detenidamente las instrucciones para rellenar correctamente los campos."}.
 {"This page allows to unregister a Jabber account in this Jabber server.","Esta página te permite borrar tu cuenta Jabber en este servidor Jabber."}.
 {"Unregister a Jabber account","Borrar una cuenta Jabber"}.
 {"Unregister","Borrar"}.
 {"Username:","Nombre de usuario:"}.
+{"You can later change your password using a Jabber client.","Puedes cambiar tu contraseña después, usando un cliente Jabber."}.
 {"Your Jabber account was succesfully created.","Tu cuenta Jabber se ha creado correctamente."}.
 {"Your Jabber account was succesfully deleted.","Tu cuenta Jabber se ha borrado correctamente."}.
